# ENGR-492

./: .gitignore  eomsolver.ipynb
Assignments/Assignment 1/: CMakeLists.txt  README.md
Assignments/Assignment 1/src/: main.cpp  main.sync-conflict-20250918-071834-NUQ6HX2.cpp
Assignments/Assignment 10/: assignment10.ipynb
Assignments/Assignment 11/: assignment11.ipynb
Assignments/Assignment 2/: README.md
Assignments/Assignment 2/src/: main.cpp
Assignments/Assignment 3/: CMakeLists.txt  README.md  imgui.ini
Assignments/Assignment 3/src/: main.cpp
Assignments/Assignment 4/: README.md
Assignments/Assignment 4/src/: main.cpp
Assignments/Assignment 5/: imgui.ini
Assignments/Assignment 5/src/: main.cpp
Assignments/Assignment 6/: imgui.ini
Assignments/Assignment 6/src/: main.cpp  spring_system.cpp  spring_system.h
CouseProjects/project1/: CMakeLists.txt  imgui.ini
CouseProjects/project1/src/: main.cpp
